# goose-ai

./: .gitignore  README.md
client/: package-lock.json
client/src/: App.vue
client/src/services/: api.js
client/src/views/: ChatPDF.vue  CustomerService.vue  Home.vue
server/: README.md  main.py  pyproject.toml
server/app/agents/: agent1.py  chat.py  game_chat.py  request.py  service_agent.py  service_chat.py
server/app/llm/: qw_llm.py
server/app/prompt/: game_prompt.py  prompt.py  service_prompt.py
server/app/routers/: ai.py  chat.py  chat_pdf.py  game.py  service.py
server/app/utils/: dify_lib.py  get_json_file.py
